--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,19 @@
-# Ignore data folder
-archive/
-
-# Ignore output data if you want
-output/
-
-# Ignore compiled python cache
+# ---- Python ----
+venv/
+.venv/
 __pycache__/
-src/__pycache__/
-src/*/__pycache__/
+*.pyc
 
-# Ignore large json outputs
-*.json
+# ---- Node ----
+node_modules/
+dist/
+
+# ---- OS ----
+.DS_Store
+
+# ---- Outputs / large files ----
+output/
+*.zip
+*.bin
+*.pt
+*.pth
